poc/tests/errors/test_FplUndeclaredVariable_01.fpl
TestNamespace
{
    theory
    {
        pred Test()
        {
            x
        }
    }
}

##############################

FplUndeclaredVariable:7:12: The name 'x' does not exist in the current context